--- a/ihris-backend/ihris-backend-site/locales/en_startup.json
+++ b/ihris-backend/ihris-backend-site/locales/en_startup.json
@@ -2,32 +2,6 @@
   "App": {
     "title": "Manage",
     "site": "Demo",
-    "wellCome": "WelCome",
-    "home": {
-      "well-come": " Welcome to iHRIS!",
-      "description": "iHRIS is IntraHealth International's free, open source software that helps countries around the world track and manage their health workforce data to improve access to services. Countries use it to capture and maintain high-quality information for health workforce planning, management, regulation, and training.",
-      "signin": "Sign in",
-      "username": "Username/Email",
-      "password": "Password",
-      "required": "Both Username and password are required",
-      "incorrect": "Username or password is incorrect!",
-      "forgotPassword": "Forgot Password?",
-      "noAccount": "No account? Sign Up",
-      "resetPassword": "Reset Password",
-      "emailAddress": "Email Address",
-      "register": "Register",
-      "employeeNumber": "Employee Number",
-      "birthDate": "Birthday date"
-    },
-    "intro": {
-      "Job_Title": "Job Title",
-      "employer_number": "Employer number",
-      "email": "Email",
-      "phone": "Phone",
-      "gender": "Gender",
-      "date-of-birth": "Date of Birth",
-      "age": "Age"
-    },
     "footer": {
       "About iHRIS": "About iHRIS",
       "Feedback": "Feedback",
@@ -44,10 +18,7 @@
     "ihris-questionnaire-section": {},
     "ihris-questionnaire-group": {},
     "ihris-resource": {},
-    "fhir-string": {
-      "Display": "Display",
-      "Code": "Code",
-      "Definition": "Definition"
+    "fhir-resources-texts": {
     },
     "hardcoded-texts": {
       "Installed Apps": "Installed Apps",
@@ -74,6 +45,7 @@
       "Reset": "Reset",
       "Close": "Close",
       "Apply": "Apply Changes",
+      "Sign Up": "Sign Up",
       "Security has been disabled for remote configuration and modules!": "Security has been disabled for remote configuration and modules!",
       "This should only be done during development." : "This should only be done during development.",
       "Idle - Auto Logout": "Idle - Auto Logout",
@@ -84,7 +56,45 @@
       "Select Your file": "Select Your file",
       "Drop excel file here or": "Drop excel file here or",
       "Done Uploading Health Workers' Information": "Done Uploading Health Workers' Information",
-      "Uploading": "Uploading"
+      "Uploading": "Uploading",
+      "Job Title": "Job Title",
+      "Employer number": "Employer number",
+      "Email": "Email",
+      "Phone": "Phone",
+      "Gender": "Gender",
+      "Age": "Age",
+      "Welcome to iHRIS!": " Welcome to iHRIS!",
+      "description": "iHRIS is IntraHealth International's free, open source software that helps countries around the world track and manage their health workforce data to improve access to services. Countries use it to capture and maintain high-quality information for health workforce planning, management, regulation, and training.",
+      "Sign in": "Sign in",
+      "Username/Email": "Username/Email",
+      "Password": "Password",
+      "Login successfull": "Login successfull",
+      "Login failed:" : "Login failed:",
+      "Sign Up failed:" : "Sign Up failed:",
+      "Email Field is required!": "Email Field is required!",
+      "Please enter a valid email": "Please enter a valid email",
+      "Sign up successful! Please login to continue": "Sign up successful! Please login to continue",
+      "User already exists with this email address!": "User already exists with this email address!",
+      "No practitioner found with given information": "No practitioner found with given information",
+      "Email does not match with registered practitioner email": "Email does not match with registered practitioner email",
+      "No Email found for this practitioner. please add your email first!": "No Email found for this practitioner. please add your email first!",
+      "Both Username and password are required": "Both Username and password are required",
+      "Username or password is incorrect!": "Username or password is incorrect!",
+      "Forgot Password": "Forgot Password",
+      "No account? Sign Up": "No account? Sign Up",
+      "Reset Password": "Reset Password",
+      "Email Address": "Email Address",
+      "Register": "Register",
+      "Employee Number": "Employee Number",
+      "Birth Date": "Birth Date",
+      "About iHRIS": "About iHRIS",
+      "Feedback": "Feedback",
+      "iHRIS Website": "iHRIS Website",
+      "You have logged out." : "You have logged out.",
+      "You have been logged out due to inactivity.": "You have been logged out due to inactivity.",
+      "Export" : "Export",
+      "Customize Report" : "Customize Report"
+
     }
   }
 }
