Re-transtalated Default EN text

--- a/ihris-backend/ihris-backend-site/locales/en_startup.json
+++ b/ihris-backend/ihris-backend-site/locales/en_startup.json
@@ -90,8 +90,8 @@
       "About iHRIS": "About iHRIS",
       "Feedback": "Feedback",
       "iHRIS Website": "iHRIS Website",
-      "You have logged out." : "You have logged out.",
-      "You have been logged out due to inactivity.": "You have been logged out due to inactivity.",
+      "You have logged out." : "You have logged out",
+      "You have been logged out due to inactivity": "You have been logged out due to inactivity",
       "Export" : "Export",
       "Customize Report" : "Customize Report"
 
