Locale fixes for fhir field labels

--- a/ihris-backend/ihris-backend-site/locales/en_startup.json
+++ b/ihris-backend/ihris-backend-site/locales/en_startup.json
@@ -93,8 +93,8 @@
       "You have logged out." : "You have logged out",
       "You have been logged out due to inactivity": "You have been logged out due to inactivity",
       "Export" : "Export",
-      "Customize Report" : "Customize Report"
-
+      "Customize Report" : "Customize Report",
+      "Please fill in all fields" : "Please fill in all fields"
     }
   }
 }
