--- a/ihris-backend/ihris-backend-site/locales/en_startup.json
+++ b/ihris-backend/ihris-backend-site/locales/en_startup.json
@@ -59,6 +59,7 @@
       "Uploading": "Uploading",
       "Job Title": "Job Title",
       "Employer number": "Employer number",
+      "Employer Number": "Employer Number",
       "Email": "Email",
       "Phone": "Phone",
       "Gender": "Gender",
