add translation capability to intro section

--- a/ihris-backend/ihris-backend-site/locales/en_startup.json
+++ b/ihris-backend/ihris-backend-site/locales/en_startup.json
@@ -57,6 +57,7 @@
       "Staff Directorate": "Staff Directorate",
       "User Role Tasks": "User Role Tasks"
     },
+    "intro": {},
     "ihris-codesystem": {},
     "ihris-search": {},
     "ihris-search-term": {},
