--- a/ihris-frontend/src/locales/en.json
+++ b/ihris-frontend/src/locales/en.json
@@ -460,7 +460,9 @@
         "You have logged out.": "You have logged out",
         "You have been logged out due to inactivity": "You have been logged out due to inactivity",
         "Export": "Export",
-        "Customize Report" : "Customize Report"
+        "Customize Report" : "Customize Report",
+        "Report": "Report",
+        "Configure": "Configure"
       }
     }
   }
