--- a/ihris-backend/ihris-backend-site/locales/en_startup.json
+++ b/ihris-backend/ihris-backend-site/locales/en_startup.json
@@ -506,7 +506,20 @@
       "Customize Report": "Customize Report",
       "Please fill in all fields": "Please fill in all fields",
       "what_is_ihris": "iHRIS is IntraHealth International's free, open source software that helps countries around the world track and manage their health workforce data to improve access to services. Countries use it to capture and maintain high-quality information for health workforce planning, management, regulation, and training.",
-      "Filters": "Filters"
+      "Filters": "Filters",
+      "Report": "Report",
+      "Configure": "Configure",
+      "Last Ended Indexing Time": "Last Ended Indexing Time",
+      "Last Began Indexing Time": "Last Began Indexing Time",
+      "Meta Data":"Meta Data",
+      "Index Name": "Index Name",
+      "FHIR Report Version": "FHIR Report Version",
+      "FHIR Report Name": "FHIR Report Name",
+      "FHIR Report Last Updated": "FHIR Report Last Updated",
+      "Reload": "Reload",
+      "This will cache the report from the last time it was cached.": "This will cache the report from the last time it was cached.",
+      "Fresh Load": "Fresh Load",
+      "This will cache the report afresh": "This will cache the report afresh"
     }
   }
 }
