removing max and min date limits for reports

--- a/ihris-backend/ihris-backend-site/locales/en.json
+++ b/ihris-backend/ihris-backend-site/locales/en.json
@@ -450,6 +450,7 @@
       "Initial Password": "Initial Password"
     },
     "hardcoded-texts": {
+      "Added successfully": "Added successfully.",
       "Installed Apps": "Installed Apps",
       "Install": "Install",
       "Install New iHRIS App": "Install New iHRIS App",
