adding locale for valueBoolean

--- a/ihris-backend/ihris-backend-site/locales/en.json
+++ b/ihris-backend/ihris-backend-site/locales/en.json
@@ -450,6 +450,8 @@
       "Initial Password": "Initial Password"
     },
     "hardcoded-texts": {
+      "true": "true",
+      "false": "false",
       "Added successfully": "Added successfully.",
       "Installed Apps": "Installed Apps",
       "Install": "Install",
