adding excel export for reports

--- a/ihris-backend/ihris-backend-site/locales/en_startup.json
+++ b/ihris-backend/ihris-backend-site/locales/en_startup.json
@@ -432,6 +432,7 @@
     "hardcoded-texts": {
       "true": "true",
       "false": "false",
+      "print": "Print",
       "Added successfully": "Added successfully.",
       "Installed Apps": "Installed Apps",
       "Install": "Install",
