add translation for validation messages

--- a/ihris-backend/ihris-backend-site/locales/en_startup.json
+++ b/ihris-backend/ihris-backend-site/locales/en_startup.json
@@ -430,6 +430,13 @@
       "User Status": "User Status"
     },
     "hardcoded-texts": {
+      "must be an integer": "must be an integer",
+      "must be an unsigned integer": "must be an unsigned integer",
+      "must be a positive integer": "must be a positive integer",
+      "must be a number": "must be a number",
+      "must be a Decimal": "must be a Decimal",
+      "is more than": "is more than",
+      "is required": "is required",
       "true": "true",
       "false": "false",
       "print": "Print",
