add text to backend-site locales as well

--- a/ihris-backend/ihris-backend-site/locales/en_startup.json
+++ b/ihris-backend/ihris-backend-site/locales/en_startup.json
@@ -524,7 +524,36 @@
       "This will cache the report from the last time it was cached.": "This will cache the report from the last time it was cached.",
       "Fresh Load": "Fresh Load",
       "This will cache the report afresh": "This will cache the report afresh",
-      "Print": "Print"
+      "Print": "Print",
+      "confirm_delete_dashboard": "Are you sure you want to delete this Dashboard?",
+      "Data Vizualizer": "Data Vizualizer",
+      "Open Another Visualization": "Open Another Visualization",
+      "Home": "Home",
+      "Delete": "Delete", 
+      "Open": "Open",
+      "Available Vizualizations": "Available Vizualizations",
+      "Delete Vizualization Confirmation": "Are you sure you want to delete this visualization?",
+      "No": "No",
+      "Yes": "Yes",
+      "Datasets": "Datasets",
+      "No Dimensions Available": "No Dimensions Available",
+      "Charts": "Charts",
+      "Visualize": "Visualize",
+      "Series": "Series",
+      "Basic Settings": "Basic Settings",
+      "Show top values only": "Show top values only",
+      "Bars Direction": "Bars Direction",
+      "Categories": "Categories",
+      "Settings": "Settings",
+      "Dashboard Instructions1": "Your dashboard is blank. Click Add Visualization",
+      "Dashboard Instructions2": " button to add dashboard items",
+      "Insert Visualization": "Insert Visualization",
+      "Create Visualization": "Create Visualization",
+      "Data visualizer welcome text1": "iHRIS Data Visualizer lets you create different charts to easily visualize your data for better decision making. ",
+      "Data visualizer welcome text2": "You may start by creating a new visualization or open an existing visualization to either edit it or creating a new",
+      "Data visualizer welcome text3": " visualization based on the open data visualization.",
+      "Visualizations": "Visualizations",
+      "Dashboards": "Dashboards"
     }
   }
 }
