--- a/ihris-backend/ihris-backend-site/locales/en_startup.json
+++ b/ihris-backend/ihris-backend-site/locales/en_startup.json
@@ -536,7 +536,7 @@
       "Data Vizualizer": "Data Vizualizer",
       "Open Another Visualization": "Open Another Visualization",
       "Home": "Home",
-      "Delete": "Delete", 
+      "Delete": "Delete",
       "Open": "Open",
       "Available Vizualizations": "Available Vizualizations",
       "Delete Vizualization Confirmation": "Are you sure you want to delete this visualization?",
@@ -560,7 +560,32 @@
       "Data visualizer welcome text2": "You may start by creating a new visualization or open an existing visualization to either edit it or creating a new",
       "Data visualizer welcome text3": " visualization based on the open data visualization.",
       "Visualizations": "Visualizations",
-      "Dashboards": "Dashboards"
+      "Dashboards": "Dashboards",
+      "Audit Logs": "Audit Logs",
+      "ID": "ID",
+      "Action Type": "Action Type",
+      "User Email": "User Email",
+      "Start From": "Start From",
+      "To": "To",
+      "Operation Outcome": "Operation Outcome",
+      "View File": "View File",
+      "View User": "View User",
+      "Compare The difference": "Compare The difference",
+      "Full Name": "Full Name",
+      "Resource": "Resource",
+      "Action": "Action",
+      "Recorded On": "Recorded On",
+      "Operation Outcome": "Operation Outcome",
+      "Actions": "Actions",
+      "Success": "Success",
+      "Minor failure": "Minor failure",
+      "Serious failure": "Serious failure",
+      "Major failure": "Major failure",
+      "Changes": "Changes",
+      "Changed fields": "Changed fields",
+      "New Value": "New Value",
+      "Old Value": "Old Value",
+      "Field": "Field"
     }
   }
 }
