default site title corrected

--- a/ihris-backend/ihris-backend-site/locales/en.json
+++ b/ihris-backend/ihris-backend-site/locales/en.json
@@ -1,7 +1,7 @@
 {
   "App": {
-    "title": "TCHAD Ministry of Health",
-    "site": "Human Resource Information System",
+    "title": "Manage",
+    "site": "Demo",
     "footer": {
       "About iHRIS": "About iHRIS",
       "Feedback": "Feedback",
