allowing the page displaying component to use props to pass fhirId,pageid etc. Use fhir-page-view to display comparisons of fhir resources in auditlog

--- a/ihris-backend/ihris-backend-site/locales/en_startup.json
+++ b/ihris-backend/ihris-backend-site/locales/en_startup.json
@@ -613,14 +613,13 @@
       "Resource": "Resource",
       "Action": "Action",
       "Recorded On": "Recorded On",
-      "Operation Outcome": "Operation Outcome",
       "Actions": "Actions",
       "Success": "Success",
       "Minor failure": "Minor failure",
       "Serious failure": "Serious failure",
       "Major failure": "Major failure",
       "Changes": "Changes",
-      "Changed fields": "Changed fields",
+      "Compare Changes": "Compare Changes",
       "New Value": "New Value",
       "Old Value": "Old Value",
       "Field": "Field"
